Dates Corrected, Insta and AfterMovie link updated

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 		                    <li><a href="javascript:void(0)"><i class="fa fa-camera"></i><span style="position: relative;">Glimpses</span><span class="fa fa-angle-left" style="float: right; position: relative;"></a>
 		                    	<ul>
 		                            <li id="gallery"><a href="gallery.html" target="_blank"><i class="fa fa-picture-o "></i>Gallery</a></li>
-		                            <li id="after-movie"><a href="javascript:void(0)"><i class="fa fa-file-video-o "></i>After Movie'16</a></li>
+		                            <li id="after-movie"><a href="https://youtu.be/CIzBQTj1XFc" target="_blank"><i class="fa fa-file-video-o "></i>After Movie'16</a></li>
 		                        </ul>
 		                    </li>                    
 		                    
@@ -106,7 +106,7 @@
 		                      <ul>
 		                        <li><a href="https://www.facebook.com/engifest/" target="_blank"><i class="fa fa-facebook"></i>Facebook</a></li>
 		                        <li><a href="https://www.youtube.com/channel/UCttG9rAcheQ_gAAmRb5CKEg" target="_blank"><i class="fa fa-youtube"></i>Youtube</a></li>
-		                        <li><a href="https://www.instagram.com/engifest__dtu/" target="_blank"><i class="fa fa-instagram"></i>Instagram</a></li>
+		                        <li><a href="https://www.instagram.com/engifest_dtu/" target="_blank"><i class="fa fa-instagram"></i>Instagram</a></li>
 		                      </ul>
 		                    </li>
 		                    <li id="sponsors"><a href="javascript:void(0)"><i class="fa fa-group"></i><span style="position: relative;">Sponsors</span></a></li>
@@ -287,7 +287,7 @@
 		            <a href="events/livewire/index.html" target="_blank"><img src="assets/main/vs-cover.jpg"></a>
 		        </div> -->
 		        <div class="dates">
-		            17th - 19th Feb 2017
+		            18th - 20th Feb 2017
 		        </div>
 			</div>
 
