added animation for moon walk in pro nigh tab

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		<link href="css/events.css" type="text/css" rel="stylesheet"/>
 		<link href="css/left-side-menu.css" type="text/css" rel="stylesheet"/>
 		<link href="css/registration-airplane.css" type="text/css" rel="stylesheet"/>
+		<link href="css/pro-night-moonwalk.css" type="text/css" rel="stylesheet"/>
 	</head>
 	<body id="container">
 		
@@ -267,6 +268,10 @@
 		  </div>
 		</div>
 
+		<!-- Pro Nights Design -->
+		<div id="pro-night-wrapper">
+			<div class="soldier"></div>
+		</div>
 	
 		<!-- Home Design -->
 		<div id = "home-design-wrapper">
