cursor hand updated

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
 				<div class="lightsaber ls-left ls-green"></div>
 				<div class="lightsaber ls-right ls-red"></div>
 			</div>
+			<div id="loader-text">
+				Turn up the Volume
+			</div>
 		</div>
 		<!-- <div id="loader">
 			<svg width="300px" height="200px" viewBox="0 0 187.3 93.7" preserveAspectRatio="xMidYMid meet" style="left: 50%; top: 50%; position: absolute; transform: translate(-50%, -50%) matrix(1, 0, 0, 1, 0, 0);">
@@ -131,15 +134,15 @@
 		
 		<!-- Lower Horizontal Menu -->
 		<div id="Menu" class="row" style="z-index: 200;">
-			<div id="home" class="col-xs-2 col-xs-offset-2 align-center floath1 lowermenusound">Home</div>
-			<div id="events" class="col-xs-2 align-center  floath2 lowermenusound">Events</div>
-			<div id="pro-night" class="col-xs-2 align-center floath3 lowermenusound">Pro Nights</div>
+			<div id="home" class="col-xs-2 col-xs-offset-2 align-center floath1 lowermenusound cursor-hand">Home</div>
+			<div id="events" class="col-xs-2 align-center  floath2 lowermenusound cursor-hand">Events</div>
+			<div id="pro-night" class="col-xs-2 align-center floath3 lowermenusound cursor-hand">Pro Nights</div>
 			<!-- <div id="contact" class="col-xs-2 align-center floath4">Contact</div> -->
-			<div id="registration" class="col-xs-2 align-center floath5 lowermenusound">Registration</div>
+			<div id="registration" class="col-xs-2 align-center floath5 lowermenusound cursor-hand">Registration</div>
 		</div>
 		
 		<!-- Mute Button -->
-		<div id="mute-wrapper">
+		<div id="mute-wrapper" class="cursor-hand">
 			<a class="speaker">
 				<span></span>
 			</a>
