engifest team modal made

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 		                      </ul>
 		                    </li>
 		                    <li id="sponsors"><a  ><i class="fa fa-group"></i><span style="position: relative;">Sponsors</span></a></li>
-		                    <li id="engifest-team"><a href="engifest-team/" target="_blank"><i class="fa fa-wrench"></i><span style="position: relative;">Engifest Team</span></a></li>
+		                    <li id="engifest-team"><a><i class="fa fa-wrench"></i><span style="position: relative;">Engifest Team</span></a></li>
 		                    <li id="contact-us"><a  ><i class="fa fa-envelope"></i><span>Contact Us</span></a></li>
 		                  </ul>
 		                </div>
@@ -269,6 +269,27 @@
 		    <div class="modal-header">
 		      <span class="close" id="spanContactModal">&times;</span>
 		      <center><p>Contact Us</p></center>
+		    </div>
+		    <div class="modal-body modal-footer">
+		      <div class="row">
+                        <div class="sponsor-type"><center>Title Sponsor</center></div>
+                        <div class="sponsor-image"><center><img src="assets/sponsors/pepsi.png"></center>
+                        </div>
+                </div>
+		    </div>
+		    <!-- <div class="modal-footer">
+		      <p>Modal Footer</p>
+		    </div> -->
+		  </div>
+		</div>
+
+		<!-- Engifest Team Modal -->
+		<div id="engifestTeamModal" class="modal">
+		  <!-- Modal content -->
+		  <div class="modal-content">
+		    <div class="modal-header">
+		      <span class="close" id="spanEngifestTeamModal">&times;</span>
+		      <center><p>Engifest Team</p></center>
 		    </div>
 		    <div class="modal-body modal-footer">
 		      <div class="row">
