added class active for all the events

--- a/index.html
+++ b/index.html
@@ -3108,7 +3108,7 @@
 			      <div class="row">
 	                    <div class="col-xs-3">
 	                    	<ul class="event-ul nav nav-tabs nav-stacked">
-	                            <li><a data-toggle="tab" href="#shakedown" class="event-list float-nav">Shakedown</a></li>
+	                            <li class="active"><a data-toggle="tab" href="#shakedown" class="event-list float-nav">Shakedown</a></li>
 	                            <li><a data-toggle="tab" href="#kaleidoscope" class="event-list float-nav">Kaleidoscope</a></li>
 	                            <li><a data-toggle="tab" href="#arte-fotographia" class="event-list float-nav">Arte Fotographia</a></li>
 	                            <li><a data-toggle="tab" href="#stand-up-comedy" class="event-list float-nav">Stand-Up Comedy</a></li>	
@@ -3355,7 +3355,7 @@
 			      <div class="row">
 	                    <div class="col-xs-3">
 	                    	<ul class="event-ul nav nav-tabs nav-stacked">
-	                            <li><a data-toggle="tab" href="#engi-idol" class="event-list float-nav">Engi Idol</a></li>
+	                            <li class="active"><a data-toggle="tab" href="#engi-idol" class="event-list float-nav">Engi Idol</a></li>
 	                            <li><a data-toggle="tab" href="#vocalicious" class="event-list float-nav">Vocalicious</a></li>
 	                            <li><a data-toggle="tab" href="#balladeers" class="event-list float-nav">Balladeers</a></li>
 	                            <li><a data-toggle="tab" href="#vrind" class="event-list float-nav">Vrind</a></li>
@@ -3748,7 +3748,7 @@
 			      <div class="row">
 	                    <div class="col-xs-3">
 	                    	<ul class="event-ul nav nav-tabs nav-stacked">
-	                            <li><a data-toggle="tab" href="#spandon" class="event-list float-nav">Spandan</a></li>
+	                            <li class="active"><a data-toggle="tab" href="#spandon" class="event-list float-nav">Spandan</a></li>
 	                            <li><a data-toggle="tab" href="#anushthaan" class="event-list float-nav">Anushthaan</a></li>
 	                            <li><a data-toggle="tab" href="#stfu" class="event-list float-nav">Switch the Funk Up</a></li>
 	                        </ul>
@@ -4146,7 +4146,7 @@
 			      <div class="row">
 	                    <div class="col-xs-3">
 	                    	<ul class="event-ul nav nav-tabs nav-stacked">
-	                            <li><a data-toggle="tab" href="#war-of-words" class="event-list float-nav">War of Words</a></li>
+	                            <li class="active"><a data-toggle="tab" href="#war-of-words" class="event-list float-nav">War of Words</a></li>
 	                            <li><a data-toggle="tab" href="#creative-writing" class="event-list float-nav">Creative Writing</a></li>
 	                            <li><a data-toggle="tab" href="#mixed-bag" class="event-list float-nav">Mixed Bag</a></li>
 	                            <li><a data-toggle="tab" href="#kavyanjana" class="event-list float-nav">काव्यांजना</a></li>
@@ -4513,7 +4513,7 @@
 			      <div class="row">
 	                    <div class="col-xs-3">
 	                    	<ul class="event-ul nav nav-tabs nav-stacked">
-	                    		<li><a data-toggle="tab" href="#livewire" class="event-list float-nav">Livewire</a></li>
+	                    		<li class="active"><a data-toggle="tab" href="#livewire" class="event-list float-nav">Livewire</a></li>
 	                    		<li><a data-toggle="tab" href="#edm-night" class="event-list float-nav">EDM Night</a></li>	
 	                            <li><a data-toggle="tab" href="#rock-night" class="event-list float-nav">Rock Night</a></li>                                                        
 	                        </ul>
@@ -4644,7 +4644,7 @@
 			      <div class="row">
 	                    <div class="col-xs-3">
 	                    	<ul class="event-ul nav nav-tabs nav-stacked">
-	                            <li><a data-toggle="tab" href="#nukkad" class="event-list float-nav">Nukkad</a></li>
+	                            <li class="active"><a data-toggle="tab" href="#nukkad" class="event-list float-nav">Nukkad</a></li>
 	                            <li><a data-toggle="tab" href="#natya" class="event-list float-nav">Natya</a></li>
 	                        </ul>
 	                    </div>
@@ -4916,7 +4916,7 @@
 			      <div class="row">
 	                    <div class="col-xs-3">
 	                    	<ul class="event-ul nav nav-tabs nav-stacked">
-	                            <li><a data-toggle="tab" href="#paridhan" class="event-list float-nav">Paridhan</a></li>
+	                            <li class="active"><a data-toggle="tab" href="#paridhan" class="event-list float-nav">Paridhan</a></li>
 	                            <li><a data-toggle="tab" href="#the-future-of-fashion" class="event-list float-nav">The Future of Fashion</a></li>
 	                            <li><a data-toggle="tab" href="#the-selfie-brag" class="event-list float-nav">The Selfie Brag</a></li>
 	                        </ul>
@@ -5165,7 +5165,7 @@
 			      <div class="row">
 	                    <div class="col-xs-3">
 	                    	<ul class="event-ul nav nav-tabs nav-stacked">
-	                            <li><a data-toggle="tab" href="#informal" class="event-list float-nav">Informal Events</a></li>
+	                            <li class="active"><a data-toggle="tab" href="#informal" class="event-list float-nav">Informal Events</a></li>
 	                        </ul>
 	                    </div>
 	                    <div class="col-xs-9">
