Registration & Contact Setup, Removed Soldier

--- a/index.html
+++ b/index.html
@@ -203,9 +203,17 @@
 		    </div>
 		    <div class="modal-body modal-footer">
 		      <div class="row">
-                        <div class="sponsor-type"><center>Title Sponsor</center></div>
-                        <div class="sponsor-image"><center><img src="assets/sponsors/pepsi.png"></center>
-                        </div>
+		      	<div class="info-content marginLeft">
+						<div class="info-row">
+	                        Follow these simple steps : <br><br>
+							1. Open the link, click on register and fill all the details.<br>
+							2. Enter Promo Code : ENGIFEST<br>
+							3. Enter OTP and register.<br>
+							4. Activate your account through email(usually found in Promotions/Spam).<br><br>
+							<center><a href="http://www.pokerbaazi.com/pbuser?campaigncode=ENGIFEST" target="_blank">http://www.pokerbaazi.com/pbuser?campaigncode=ENGIFEST</a></center> <br><br>
+							<b>Note : </b>Unique Verification Email from Pokerbaazi.com will act as passes to the concert and provide entry into the campus! Registrations only through this link will be considered.
+						</div>
+					</div>
                 </div>
 		    </div>
 		    <!-- <div class="modal-footer">
@@ -271,11 +279,53 @@
 		      <center><p>Contact Us</p></center>
 		    </div>
 		    <div class="modal-body modal-footer">
-		      <div class="row">
-                        <div class="sponsor-type"><center>Title Sponsor</center></div>
-                        <div class="sponsor-image"><center><img src="assets/sponsors/pepsi.png"></center>
-                        </div>
+		      <div class="row contactRow">
+                        <div class = "col-xs-2 col-xs-offset-2"> 
+	                    	<div class="name">Gunik Goel</div>
+	                        <div class="designation">Cultural Secretary</div>
+	                        <div class="contact">+91-9999561252</div>
+	                    </div>
+	                    <div class = "col-xs-2"> 
+	                    	<div class="name">Amit Phogat</div>
+	                        <div class="designation">President</div>
+	                        <div class="contact">+91-8802148418</div>
+	                    </div>
+	                    <div class = "col-xs-2"> 
+	                    	<div class="name">Sheikh Farahan Raza</div>
+	                        <div class="designation">Vice President</div>
+	                        <div class="contact">+91-9582368279</div>
+	                    </div>
+	                    <div class = "col-xs-2"> 
+	                    	<div class="name">Nalin Choudhary</div>
+	                        <div class="designation">Cultural Advisor</div>
+	                        <div class="contact">+91-8588001179</div>
+	                    </div>
                 </div>
+                <div class="row contactRow">
+                        <div class = "col-xs-3 col-xs-offset-2"> 
+	                    	<div class="name">Saloni Jasrasaria</div>
+	                        <div class="designation">Head,Public Relations</div>
+	                        <div class="contact">+91-9868046920</div>
+	                    </div>
+	                    <div class = "col-xs-3 col-xs-offset-2"> 
+	                    	<div class="name">Fahad Ahmad</div>
+	                        <div class="designation">Head,Public Relations</div>
+	                        <div class="contact">+91-7042135799</div>
+	                    </div>
+                </div>
+                <div class="row contactRow">
+                        <div class = "col-xs-3 col-xs-offset-2"> 
+	                    	<div class="name">Debadri Das</div>
+	                        <div class="designation">Head, Hospitality</div>
+	                        <div class="contact">+91-9811353121</div>
+	                    </div>
+	                    <div class = "col-xs-3 col-xs-offset-2"> 
+	                    	<div class="name">Abhishek Bishnoi</div>
+	                        <div class="designation">Head, Hospitality</div>
+	                        <div class="contact">+91-8562065555</div>
+	                    </div>
+                </div>
+
 		    </div>
 		    <!-- <div class="modal-footer">
 		      <p>Modal Footer</p>
@@ -305,9 +355,9 @@
 		</div>
 
 		<!-- Pro Nights Design -->
-		<div id="pro-night-wrapper">
+		<!-- <div id="pro-night-wrapper">
 			<div class="soldier"></div>
-		</div>
+		</div> -->
 	
 		<!-- Home Design -->
 		<div id = "home-design-wrapper">
