Contact and Venue Updated

--- a/team.html
+++ b/team.html
@@ -50,6 +50,36 @@
                 <div class="name">Vishal Rana</div>
                 <div class="designation">President</div>
             </div>
+            <div class="">
+                <div class="contact-image"><img class ="img" src="assets/team/Aarman Roy.jpg"></div> 
+                <div class="name">Vishal Rana</div>
+                <div class="designation">President</div>
+            </div>
+            <div class="">
+                <div class="contact-image"><img class ="img" src="assets/team/Aarman Roy.jpg"></div> 
+                <div class="name">Vishal Rana</div>
+                <div class="designation">President</div>
+            </div>
+            <div class="">
+                <div class="contact-image"><img class ="img" src="assets/team/Aarman Roy.jpg"></div> 
+                <div class="name">Vishal Rana</div>
+                <div class="designation">President</div>
+            </div>
+            <div class="">
+                <div class="contact-image"><img class ="img" src="assets/team/Aarman Roy.jpg"></div> 
+                <div class="name">Vishal Rana</div>
+                <div class="designation">President</div>
+            </div>
+            <div class="">
+                <div class="contact-image"><img class ="img" src="assets/team/Aarman Roy.jpg"></div> 
+                <div class="name">Vishal Rana</div>
+                <div class="designation">President</div>
+            </div>
+            <div class="">
+                <div class="contact-image"><img class ="img" src="assets/team/Aarman Roy.jpg"></div> 
+                <div class="name">Vishal Rana</div>
+                <div class="designation">President</div>
+            </div>
             
     	</div>	
     	<div class="row flex-container">
