--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
 							1. Open the link, click on register and fill all the details.<br>
 							2. Enter Promo Code : ENGIFEST<br>
 							3. Enter OTP and register.<br>
-							4. Activate your account through email(usually found in Promotions/Spam).<br><br>
-							<center><a href="http://www.pokerbaazi.com/pbuser?campaigncode=ENGIFEST" target="_blank">http://www.pokerbaazi.com/pbuser?campaigncode=ENGIFEST</a></center> <br><br>
+							4. Activate your account through email(usually found in Promotions/Spam).<br>
+							<center><a class= "myButton no-decoration" href="http://www.pokerbaazi.com/pbuser?campaigncode=ENGIFEST" target="_blank">Register</a></center> <br>
 							<b>Note : </b>Unique Verification Email from Pokerbaazi.com will act as passes to the concert and provide entry into the campus! Registrations only through this link will be considered.
 						</div>
 					</div>
