team members JPG updated

--- a/team.html
+++ b/team.html
@@ -45,7 +45,7 @@
                 <div class="designation">Cultural Secretary, Cultural Council</div>
             </div>
             <div class="flex-item">
-                <div class="contact-image"><img class ="img" src="assets/team/Nalin Choudhary.jpg"></div> 
+                <div class="contact-image"><img class ="img" src="assets/team/Nalin Choudhary.JPG"></div> 
                 <div class="name">Nalin Choudhary</div>
                 <div class="designation">Cultural Advisor, Cultural Council</div>
             </div>
@@ -65,12 +65,12 @@
             </div>
         	<div class="row flex-container">
         		<div class="flex-item">
-                    <div class="contact-image"><img class ="img" src="assets/team/Dhruv Dua.jpg"></div> 
+                    <div class="contact-image"><img class ="img" src="assets/team/Dhruv Dua.JPG"></div> 
                     <div class="name">Dhruv Dua</div>
                     <div class="designation">Treasurer</div>
                 </div>
                 <div class="flex-item">
-                    <div class="contact-image"><img class ="img" src="assets/team/Akriti Tewari.jpg"></div> 
+                    <div class="contact-image"><img class ="img" src="assets/team/Akriti Tewari.JPG"></div> 
                     <div class="name">Akriti Tewari</div>
                     <div class="designation">Joint Cultural Secretary</div>
                 </div>
@@ -123,7 +123,7 @@
                     <div class="designation">Convenor</div>
                 </div>
                 <div class="flex-item">
-                    <div class="contact-image"><img class ="img" src="assets/team/Deepak Baghel.jpg"></div> 
+                    <div class="contact-image"><img class ="img" src="assets/team/Deepak Baghel.JPG"></div> 
                     <div class="name">Deepak Baghel</div>
                     <div class="designation">Convenor</div>
                 </div>
@@ -187,7 +187,7 @@
                 </div>
                 <div class="row flex-container">
                     <div class="flex-item">
-                        <div class="contact-image"><img class ="img" src="assets/team/Vartika Chaudhary.jpg"></div> 
+                        <div class="contact-image"><img class ="img" src="assets/team/Vartika Chaudhary.JPG"></div> 
                         <div class="name">Vartika Chaudhary</div>
                         <div class="designation">Head</div>
                     </div>
@@ -204,7 +204,7 @@
                 </div>
                 <div class="row flex-container">
                     <div class="flex-item">
-                        <div class="contact-image"><img class ="img" src="assets/team/Apurv Ashutosh Sharma.jpg"></div> 
+                        <div class="contact-image"><img class ="img" src="assets/team/APURV ASHUTOSH SHARMA.JPG"></div> 
                         <div class="name">Apurv Ashutosh Sharma</div>
                         <div class="designation">Head</div>
                     </div>
@@ -427,7 +427,7 @@
                 </div>
                 <div class="row flex-container">
                     <div class="flex-item">
-                        <div class="contact-image"><img class ="img" src="assets/team/Sneha Roy.jpg"></div> 
+                        <div class="contact-image"><img class ="img" src="assets/team/Sneha Roy.JPG"></div> 
                         <div class="name">Sneha Roy</div>
                         <div class="designation">Head</div>
                     </div>
