--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 			}
 		</script>
 		<!-- No cache need to be changed -->
-		<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+		<!-- <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
 		<meta http-equiv="Pragma" content="no-cache" />
-		<meta http-equiv="Expires" content="0" />
+		<meta http-equiv="Expires" content="0" /> -->
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta itemprop="name" content="Engifest &middot; Endless Energetic Enigmatic">
         <meta itemprop="description" content="Engifest 2017">
@@ -4023,7 +4023,7 @@
 						        	
 						                       	ROUND 1: Online Prelims:<br>
 
-												PARTICIPANTS(SOLO/DUET) ARE SUPPOSED TO SEND A VIDEO OF THEIR PERFORMANCE(MAXIMUM: 6 MINUTES,  CLASSICAL/SEMI-CLASSICAL/FOLK) TO  nrityangana.dtu@gmail.com LATEST BY 12TH FEBRUARY 2016.<br>
+												PARTICIPANTS(SOLO/DUET) ARE SUPPOSED TO SEND A VIDEO OF THEIR PERFORMANCE(MAXIMUM: 6 MINUTES,  CLASSICAL/SEMI-CLASSICAL/FOLK) TO  nrityangana.dtu@gmail.com LATEST BY 12TH FEBRUARY 2017.<br>
 
 												1.  All forms of pure Indian classical dance forms are allowed.<br>
 												2.  We allow semiclassical styles provided there are distinctive classical elements are identified in the performance, amalgamated with other fusion styles. Contact the event coordinator in case of any queries.<br>
@@ -5263,7 +5263,7 @@
 						                        <div class="info-row">
 						                        One table, a deck of cards & a game of poker.
 												Enticing already, isn't it?<br>
-												Well, Engifest’16 presents to you POKER, a contest replete with vigor and the will to win; where you test your wit and LUCK. So use your poker face, and raise the stakes with your stellar flair!
+												Well, Engifest’17 presents to you POKER, a contest replete with vigor and the will to win; where you test your wit and LUCK. So use your poker face, and raise the stakes with your stellar flair!
 
 						                        </div>
 						                        <!-- <div class="info-row">
