--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 			var maxWidth = 700;
 			var maxHeight = 660;
 			var mobileURL = "http://engifest17.github.io/MobileWebsite";
-			if(screen.width < maxWidth || screen.height < maxHeight || screen.height > screen.width || window.innerWidth < maxWidth || window.innerHeight < maxHeight || window.innerHeight > window.innerWidth) {
+			if(screen.width < maxWidth || screen.height < maxHeight || screen.height > screen.width ) {
 				document.location = mobileURL;
 			}
 		</script>
