--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 			}
 		</script>
 		<!-- No cache need to be changed -->
-		<!-- <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+		<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
 		<meta http-equiv="Pragma" content="no-cache" />
-		<meta http-equiv="Expires" content="0" /> -->
+		<meta http-equiv="Expires" content="0" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta itemprop="name" content="Engifest &middot; Endless Energetic Enigmatic">
         <meta itemprop="description" content="Engifest 2017">
