Added Sponsors Page

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 		                        <li><a href="https://www.instagram.com/engifest_dtu/" target="_blank"><i class="fa fa-instagram"></i>Instagram</a></li>
 		                      </ul>
 		                    </li>
-		                    <li id="sponsors"><a  ><i class="fa fa-group"></i><span style="position: relative;">Sponsors</span></a></li>
+		                    <li id="sponsors"><a href ="sponsors.html" target="_blank"><i class="fa fa-group"></i><span style="position: relative;">Sponsors</span></a></li>
 		                    <li id="engifest-team"><a href ="team.html" target="_blank"><i class="fa fa-wrench"></i><span style="position: relative;">Engifest Team</span></a></li>
 		                    <li id="contact-us"><a ><i class="fa fa-envelope"></i><span>Contact Us</span></a></li>
 		                  </ul>
