sponsors page , plus favicon , pro-night-image

--- a/sponsors.html
+++ b/sponsors.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, user-scalable=no">
 	
   <!-- <link rel="stylesheet" type="text/css" href="css/gallery.css"> -->
-  <link rel="stylesheet" type="text/css" href="css/team.css">
+  <link rel="stylesheet" type="text/css" href="css/sponsors.css">
   <link rel="shortcut icon" type="image/x-icon" href="assets/main/engi-small.ico" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	
@@ -31,7 +31,7 @@
     <div id="wrapper">
     	
         <br><br>
-        <div class="row title-head"><center>Engifest'17 Team</center></div>
+        <div class="row title-head"><center>Sponsors</center></div>
         <br><br>
         <div class="row flex-container">
     		<div class="flex-item">
