--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, user-scalable=no">
 	
   <link rel="stylesheet" type="text/css" href="css/gallery.css">
-	
+	<link rel="shortcut icon" type="image/x-icon" href="assets/main/engi-small.ico" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	
   <!-- Latest compiled and minified CSS -->
