--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <meta itemprop="description" content="Engifest 2017">
 		
 		<title>Engifest'17</title>
-		<link rel="shortcut icon" type="image/x-icon" href="assets/main/favicon.ico" />
+		<link rel="shortcut icon" type="image/x-icon" href="assets/main/engi-small.ico" />
 		<!-- Css Needed -->
 		<link href="css/loader.css" type="text/css" rel="stylesheet"/>
 		<link href="css/events-satellite.css" type="text/css" rel="stylesheet"/>
@@ -171,7 +171,10 @@
 		    <div class="modal-body modal-footer">
 		      <div class="row">
                         <!-- <div class="pr-night-type"><center>Title Sponsor</center></div> -->
-                        <div><center><img class="pro-night-image" src="assets/main/pro_night_cover.png"></center>
+                        <div id= "pro-night-div">
+                        	<center>
+                        		<img class="pro-night-image" src="assets/main/pro_night_cover.png">
+                        	</center>
                         </div>
                 </div>
 		    </div>
