--- a/team.html
+++ b/team.html
@@ -359,31 +359,9 @@
             </div>
         </div>        
 
-        <!-- Web - Informal - Emcee -->
+        <!-- Informal - Web - Emcee -->
         <br><br>
         <div class="row">
-            <div class="col-xs-5">
-                <div class="flex-header">
-                    <center> Web Development Team </center>
-                </div>
-                <div class="row flex-container">
-                    <div class="flex-item">
-                        <div class="contact-image"><img class ="img" src="assets/team/Bhaskar Goyal.jpg"></div> 
-                        <div class="name">Bhaskar Goyal</div>
-                        <div class="designation">Head</div>
-                    </div>
-                    <div class="flex-item">
-                        <div class="contact-image"><img class ="img" src="assets/team/Avijeet Gupta.jpg"></div> 
-                        <div class="name">Avijeet Gupta</div>
-                        <div class="designation">Head</div>
-                    </div>
-                    <div class="flex-item">
-                        <div class="contact-image"><img class ="img" src="assets/team/Aditya Verma.jpg"></div> 
-                        <div class="name">Aditya Verma</div>
-                        <div class="designation">Head</div>
-                    </div>
-                </div>
-            </div>
             <div class="col-xs-4">
                 <div class="flex-header">
                     <center> Informal Team</center>
@@ -406,7 +384,29 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xs-3">
+            <div class="col-xs-4">
+                <div class="flex-header">
+                    <center> Web Development Team </center>
+                </div>
+                <div class="row flex-container">
+                    <div class="flex-item">
+                        <div class="contact-image"><img class ="img" src="assets/team/Bhaskar Goyal.jpg"></div> 
+                        <div class="name">Bhaskar Goyal</div>
+                        <div class="designation">Head</div>
+                    </div>
+                    <div class="flex-item">
+                        <div class="contact-image"><img class ="img" src="assets/team/Avijeet Gupta.jpg"></div> 
+                        <div class="name">Avijeet Gupta</div>
+                        <div class="designation">Head</div>
+                    </div>
+                    <div class="flex-item">
+                        <div class="contact-image"><img class ="img" src="assets/team/Aditya Verma.jpg"></div> 
+                        <div class="name">Aditya Verma</div>
+                        <div class="designation">Head</div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-4">
                 <div class="flex-header">
                     <center> EMCEE Team</center>
                 </div>
